fixed spacing in butikoversigt for mobile
added a margin to .store-cards to create space between the last card and the footer

--- a/styles/main.css
+++ b/styles/main.css
@@ -653,6 +653,7 @@ footer a {
      /* Media Query for "cards" på butik-oversigt-fanen */
     .store-cards{
         gap:1em;
+        margin-bottom: 1em;
     }
 
     .card {
